manifestos_kubernetes/5_mysql_deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: strapi-db
  namespace: strapi
spec:
  selector:
    app: strapi-db
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi-db
  namespace: strapi
  labels:
    app: strapi-db
spec:
  selector:
    matchLabels:
      app:  strapi-db
  strategy: {}
  template:
    metadata:
      labels:
        app: strapi-db
    spec:
      containers:
      - image: mariadb:10.6
        imagePullPolicy: IfNotPresent
        name: mysql
        args: ["--default-authentication-plugin=mysql_native_password"]      
        ports:
        - containerPort: 3306
          name: mysql
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.2"
          limits:
            memory: "512Mi"
            cpu: "0.4"
        readinessProbe:
          exec:
            command:
            - bash
            - "-c"
            - |
              set -ex
              mysql -u"$MARIADB_USER" -p"$MARIADB_PASSWORD"  -e 'SELECT 1' &> /dev/null
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 1     
        volumeMounts:
        - name: strapi-db-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: strapi-db-storage
        persistentVolumeClaim:
          claimName: pv-claim-strapi
